[package]
name = "engcon"
version = "0.1.0"
edition = "2021"
authors = ["Tim Janus <tim@janus.rs>"]
license = "MIT OR Apache-2.0"

description = "Helpful macros to define contracts for constraints at rust struct level."
#keywords = ["engineering", "contracts"]
#categories = []

#documentation = "https://docs.rs/strum"
homepage = "https://github.com/DarthB/engcon"
repository = "https://github.com/DarthB/engcon"
readme = "README.md"

[features]
derive = ["engcon_macros"]

[dependencies]
engcon_macros = { path = "../engcon_macros", optional = true, version = "0.1" }

[dev-dependencies]
engcon_macros = { path = "../engcon_macros", version = "0.1" }

[package.metadata.docs.rs]
features = ["derive"]
rustdoc-args = ["--cfg", "docsrs"]
