[package]
name = "engcon"
version = "0.1.0"
edition = "2021"
authors = ["Tim Janus <tim@janus.rs>"]
license = "MIT OR Apache-2.0"

description = "Helpful macros to define (eng)ineering (con)tracts on data-structure level"
keywords = ["engineering", "contracts", "validation", "rules"]
categories = ["data-structures", "science"]

documentation = "https://docs.rs/engcon"
homepage = "https://github.com/DarthB/engcon"
repository = "https://github.com/DarthB/engcon"
readme = "../README.md"

[features]
derive = ["engcon_macros"]

[dependencies]
engcon_macros = { path = "../engcon_macros", optional = true, version = "0.1" }

[dev-dependencies]
engcon_macros = { path = "../engcon_macros", version = "0.1" }

[package.metadata.docs.rs]
features = ["derive"]
rustdoc-args = ["--cfg", "docsrs"]
