[package]
name = "engcon_macros"
version = "0.1.0"
edition = "2021"
authors = ["Tim Janus <tim@janus.rs>"]
license = "MIT OR Apache-2.0"

description = "Helpful macros to define contracts on data-structure level"
keywords = ["engineering", "contracts", "validation", "rules"]
categories = ["data-structures", "science"]

documentation = "https://docs.rs/engcon"
homepage = "https://github.com/DarthB/engcon"
repository = "https://github.com/DarthB/engcon"
readme = "../README.md"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }

[dev-dependencies]
engcon = { path = "../engcon" }
