[package]
name = "engcon_distillation"
version = "0.1.0"
edition = "2021"
authors = ["Tim Janus <tim@janus.rs>"]
license = "MIT OR Apache-2.0"

description = "A small example of using engcon for a distillation column"

[dependencies]
engcon = { path = "../../engcon", features = ["derive"], version = "0.1" }
